--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.show-sql=true
+spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/freelance
+spring.datasource.username=postgres
+spring.datasource.password=root
 
+server.servlet.context-path=/api
