added cors config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 
 server.servlet.context-path=/api
+
+
+front.url=http://localhost:4200
