implemented jwt authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.datasource.password=root
 
 server.servlet.context-path=/api
 
+front.url=hZttp://localhost:4200
 
-front.url=http://localhost:4200
+jwt.secret=fPs0lps8TgLbLMDTWx+1vA==
