--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,12 +4,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: build app
+      - name: Check out code
         uses: actions/checkout@v2
+      - name: Bulding app
         run: mvn -Pdev clean install package
   tests:
     runs-on: ubuntu-latest
     steps:
-      - name: test app
+      - name: Check out code
         uses: actions/checkout@v2
+      - name: Testing app
         run: mvn test
