remote database config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ server.servlet.context-path=/api
 
 front.url=http://localhost:4200
 
-jwt.secret=fPs0lps8TgLbLMDTWx+1vA==
+jwt.secret=ENC(9sh9Tn/D6r13LOzjZxQbWs39xC/Z38yOzVOjwd15qKzaxWthMlhHfA==)
