modified run command in gh action

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,4 +13,4 @@ jobs:
           distribution: 'adopt'
           cache: maven
       - name: Bulding app
-        run: mvn -Pdev -Djasypt.encryptor.password=${{ENC_KEY}} clean install package
+        run: mvn -Pdev -Djasypt.encryptor.password=${{ secrets.ENC_KEY }} clean install package
